--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Simple AI Chat Bot Demo with Web Speech API">
-    <meta name="author" content="Tomomi Imura  @girlie_mac">
+    <meta name="description" content="chatbot which uses web speech api for chatting">
+    <meta name="author" content="Divyanshu Saini">
 
     <title>Simple AI Demo with Web Speech API</title>
 
@@ -15,14 +15,14 @@
 
   <body>
     <section>
-      <h1>Simple AI Bot</h1>
+      <h1>Weather voice Bot</h1>
       <h2>with Web Speech API</h2>
 
       <button><i class="fa fa-microphone"></i></button>
 
       <div>
           <p>You said: <em class="output-you">...</em></p>
-          <p>Bot replied: <em class="output-bot">...</em></p>
+          <p>InfoTalky replied: <em class="output-bot">...</em></p>
       </div>
     </section>
 
